Alterações no site

--- a/site-bob/biografia.html
+++ b/site-bob/biografia.html
@@ -179,7 +179,7 @@
     <div class="linha"></div>
     <footer>
        
-            <div class="textoFooter"><p>Inspirado pelas mensagens de paz e unidade de Bob Marley, nosso site apoia o <a href="https://www.ipea.gov.br/ods/ods16.html#:~:text=Promover%20sociedades%20pacíficas%20e%20inclusivas,inclusivas%20em%20todos%20os%20níveis" class="onu" onclick="objetivo16()">Objetivo 16 da ONU</a>, 
+            <div class="textoFooter"><p>Inspirado pelas mensagens de paz de Bob Marley, nosso site apoia o <a href="https://www.ipea.gov.br/ods/ods16.html#:~:text=Promover%20sociedades%20pacíficas%20e%20inclusivas,inclusivas%20em%20todos%20os%20níveis" class="onu" onclick="objetivo16()">Objetivo 16 da ONU</a>, 
                 que busca promover sociedades pacíficas e inclusivas, garantir acesso à justiça para todos e construir instituições eficazes, 
                 responsáveis e inclusivas. Junte-se a nós na celebração do legado de Bob Marley e na promoção de um mundo mais justo e harmonioso.
             </p></div>
@@ -219,5 +219,9 @@
         window.location.href = `quiz.html`;
 
     }
+    function musicas(){
+    window.location.href = `musicas.html`;
+
+}
     AOS.init();
 </script>
