--- a/site-bob/cadastro.html
+++ b/site-bob/cadastro.html
@@ -21,13 +21,13 @@
                 </div>
 
                 <div class="linha">
-                    <div class="inpt">Nome</div><input type="text" id="input_nome">
-                    <div class="inpt">Sobrenome</div><input type="text" id="input_sobrenome">
+                    <div class="inpt">Nome</div><input type="text" id="input_nome" placeholder="Nome">
+                    <div class="inpt">Sobrenome</div><input type="text" id="input_sobrenome" placeholder="Sobrenome">
                 </div>
 
                 <div class="linha">
-                    <div class="inpt">Email </div><input type="text" id="input_email">
-                    <div class="inpt">Senha </div> <input type="text" id="input_senha">
+                    <div class="inpt">Email </div><input type="text" id="input_email" placeholder="Email">
+                    <div class="inpt">Senha </div> <input type="text" id="input_senha" placeholder="Senha">
                 </div>
                 <span class="button_login"><button>Cadastrar</button></span><br>
                 <div class="cadastrar">Já possui Login? <span onclick="logar()" class="aqui"> Logar</span>
