--- a/site-bob/index.html
+++ b/site-bob/index.html
@@ -35,7 +35,7 @@
                     Explore suas letras profundas, mergulhe em sua filosofia de paz e igualdade, e deixe-se envolver pelo espírito vibrante do reggae.<br>  
                     Seja você um fã dedicado ou um curioso em busca de inspiração, nosso site é seu portal para o mundo de Bob Marley. Deixe-se levar pela música, pelo ativismo e pela alma eterna deste visionário. Bem-vindo ao universo de Bob Marley</p>
                     <span class="red">Quiz</span><br>
-                    <img onclick="quiz()" class="banda" src="assets/bob_PJ2.jpg""></div> 
+                    <img onclick="quiz()" class="banda" src="assets/image 28.png""></div> 
                 </div>
                 <div class="wailers">
                     <span class="green">Biografia </span> <img onclick="biografia()" class="carreira" src="https://th.bing.com/th/id/OIG4.mIQ1TnhzTolzgifwwojS?w=1024&h=1024&rs=1&pid=ImgDetMain" alt=""><br>
@@ -47,7 +47,7 @@
                 <footer>
                     
                     
-                    <div class="textoFooter"><p>Inspirado pelas mensagens de paz e unidade de Bob Marley, nosso site apoia o <a href="https://www.ipea.gov.br/ods/ods16.html#:~:text=Promover%20sociedades%20pacíficas%20e%20inclusivas,inclusivas%20em%20todos%20os%20níveis" class="onu" onclick="objetivo16()">Objetivo 16 da ONU</a>, 
+                    <div class="textoFooter"><p>Inspirado pelas mensagens de paz de Bob Marley, nosso site apoia o <a href="https://www.ipea.gov.br/ods/ods16.html#:~:text=Promover%20sociedades%20pacíficas%20e%20inclusivas,inclusivas%20em%20todos%20os%20níveis" class="onu" onclick="objetivo16()">Objetivo 16 da ONU</a>, 
                         que busca promover sociedades pacíficas e inclusivas, garantir acesso à justiça para todos e construir instituições eficazes, 
                         responsáveis e inclusivas. Junte-se a nós na celebração do legado de Bob Marley e na promoção de um mundo mais justo e harmonioso.
                     </p></div>
@@ -81,6 +81,10 @@
         window.location.href = `paises.html`;
 
     }
+    function musicas(){
+    window.location.href = `musicas.html`;
+
+}
 </script>
 </html>
 
