Site estrutura finalizado

--- a/site-bob/paises.html
+++ b/site-bob/paises.html
@@ -12,9 +12,10 @@
 
 <body>
     <div class="header" id="header">
-        <img class="logo_header" src="assets/bob 1.png" alt="">
+        <img onclick="home()" class="logo_header" src="assets/OIG4-removebg-preview (1).png" alt="">
         <div class="entrada">
-            <a onclick="login()" class="login">Login |</a>
+            <a onclick="login()" class="login">Login </a>
+            <a class="barra"> | </a>
             <a onclick="cadastro()" class="cadastro"> Cadastrar-se</a>
         </div>
         <div class="navigation_header" id="navigation_header">
