--- a/site-bob/quiz.html
+++ b/site-bob/quiz.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="voltar" >
-        <a href="index.html"> <img class="voltar" src="assets/bob 1.png" alt="">
+        <a href="index.html"> <img class="voltar" src="assets/OIG4-removebg-preview (1).png" alt="">
             <span>Voltar  </span> </a>
     </div>
     
