--- a/site-bob/index.html
+++ b/site-bob/index.html
@@ -9,12 +9,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     </head>
     <body >
         <div class="header" id="header">
-            <img class="logo_header" src="assets/bob 1.png" alt="">
+            <img onclick="home()" class="logo_header" src="assets/OIG4-removebg-preview (1).png" alt="">
             <div class="entrada">
-                <a onclick="login()" class="login">Login |</a>
+                <a onclick="login()" class="login">Login </a>
+                <a class="barra"> |</a>
                 <a onclick="cadastro()" class="cadastro">  Cadastrar-se</a>
             </div>
             <div class="navigation_header" id="navigation_header">
